syntax = "proto3";

option go_package = "github.com/dorm-parcel-manager/dpm/common/pb";

package pb;

message Context {
  uint32 userId = 1;
  UserType userType = 2;
}

enum UserType {
  TYPE_STUDENT = 0;
  TYPE_STAFF = 1;
  TYPE_ADMIN = 2;
}

message Empty {

}

message HelloRequest {
  string name = 1;
}

message HelloResponse {
  string message = 1;
}
